@@ -15,6 +15,7 @@ Format:
 * Turn off logging of request headers during errors and exceptions; we do not want to record any private or sensitive client information.
 * Fix bug with incorrect Primary Key on Observations.
 	It's perfectly reasonable that we might see the same certificate used on the same site in non-contiguous blocks of time. Allow such changes to be stored in the database. (this has only been a bug since v3.0)
+* Fix bug: do not update previous key's observation end time when adding a new key.
 + Add documentation and script for upgrading from notary version 2.x to version 3.x.
 * Add --verbose switch to scanner to generate less log data.
 
